# Epsidf_Study

./: .gitignore  .project  CMakeLists.txt  MyCode.h  README.md  component.mk  user_config.h
components/Http/: CMakeLists.txt  Http.cpp  Http.h
components/I2c/: CMakeLists.txt  I2c.cpp
components/Sd/: CMakeLists.txt  Sd.h
components/Spi/: CMakeLists.txt  Spi.cpp
components/Uart/: CMakeLists.txt  README.md  Uart.cpp  Uart.h
components/Wifi/: CMakeLists.txt  README.md  Wifi.cpp  Wifi.h
components/core/Http/: Http.cpp
components/core/Spi/: Spi.h
components/core/Uart/: Uart.cpp
components/core/Wifi/: Wifi.h
core/Http/: Http.h
core/HttpClient/: HttpClient.cpp  HttpClient.h
core/HttpServer/: HttpServer.cpp  HttpServer.h
core/I2c/: I2c.cpp  I2c.h
core/Sd/: CMakeLists.txt  Sd.cpp  Sd.h
core/Spi/: Spi.cpp  Spi.h
core/Uart/: Uart.cpp  Uart.h
core/Wifi/: Wifi.cpp  Wifi.h
devices/St7789/: St7789.cpp  St7789.h
examples/st7789/: st7789_main.cpp
examples/wifi/: CMakeLists.txt  wifi_main.cpp
main/: CMakeLists.txt  main.cpp
